Adding note about add-opens in Java 17